--- a/notebooks/model_trainer.ipynb
+++ b/notebooks/model_trainer.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,31 +408,23 @@
     "numeric_transformer = MinMaxScaler()\n",
     "preprocessor = ColumnTransformer([\n",
     "    (\"MinMaxScaler\", numeric_transformer, delay_columns),\n",
-    "    (\"MinMaxScaler\", numeric_transformer, adapt_columns),\n",
-    "    (\"MinMaxScaler\", numeric_transformer, power_columns)\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Names provided are not unique: ['MinMaxScaler', 'MinMaxScaler', 'MinMaxScaler']",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m X_class \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocessor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit_transform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_class\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m X_class\u001b[38;5;241m.\u001b[39mshape\n",
-      "File \u001b[0;32m~/Desktop/Dynamic_Grid_Management/venv/lib/python3.11/site-packages/sklearn/utils/_set_output.py:319\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[0;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[1;32m    318\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m--> 319\u001b[0m     data_to_wrap \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    320\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data_to_wrap, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[1;32m    322\u001b[0m         return_tuple \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    323\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[38;5;241m0\u001b[39m], X, \u001b[38;5;28mself\u001b[39m),\n\u001b[1;32m    324\u001b[0m             \u001b[38;5;241m*\u001b[39mdata_to_wrap[\u001b[38;5;241m1\u001b[39m:],\n\u001b[1;32m    325\u001b[0m         )\n",
-      "File \u001b[0;32m~/Desktop/Dynamic_Grid_Management/venv/lib/python3.11/site-packages/sklearn/base.py:1389\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[0;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1382\u001b[0m     estimator\u001b[38;5;241m.\u001b[39m_validate_params()\n\u001b[1;32m   1384\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[1;32m   1385\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m   1386\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[1;32m   1387\u001b[0m     )\n\u001b[1;32m   1388\u001b[0m ):\n\u001b[0;32m-> 1389\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfit_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mestimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/Dynamic_Grid_Management/venv/lib/python3.11/site-packages/sklearn/compose/_column_transformer.py:989\u001b[0m, in \u001b[0;36mColumnTransformer.fit_transform\u001b[0;34m(self, X, y, **params)\u001b[0m\n\u001b[1;32m    987\u001b[0m \u001b[38;5;66;03m# set n_features_in_ attribute\u001b[39;00m\n\u001b[1;32m    988\u001b[0m _check_n_features(\u001b[38;5;28mself\u001b[39m, X, reset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m--> 989\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_transformers\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    990\u001b[0m n_samples \u001b[38;5;241m=\u001b[39m _num_samples(X)\n\u001b[1;32m    992\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_column_callables(X)\n",
-      "File \u001b[0;32m~/Desktop/Dynamic_Grid_Management/venv/lib/python3.11/site-packages/sklearn/compose/_column_transformer.py:519\u001b[0m, in \u001b[0;36mColumnTransformer._validate_transformers\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    516\u001b[0m names, transformers, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransformers)\n\u001b[1;32m    518\u001b[0m \u001b[38;5;66;03m# validate names\u001b[39;00m\n\u001b[0;32m--> 519\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_names\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnames\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    521\u001b[0m \u001b[38;5;66;03m# validate estimators\u001b[39;00m\n\u001b[1;32m    522\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m transformers:\n",
-      "File \u001b[0;32m~/Desktop/Dynamic_Grid_Management/venv/lib/python3.11/site-packages/sklearn/utils/metaestimators.py:83\u001b[0m, in \u001b[0;36m_BaseComposition._validate_names\u001b[0;34m(self, names)\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_validate_names\u001b[39m(\u001b[38;5;28mself\u001b[39m, names):\n\u001b[1;32m     82\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(names)) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(names):\n\u001b[0;32m---> 83\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNames provided are not unique: \u001b[39m\u001b[38;5;132;01m{0!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mlist\u001b[39m(names)))\n\u001b[1;32m     84\u001b[0m     invalid_names \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(names)\u001b[38;5;241m.\u001b[39mintersection(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_params(deep\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m))\n\u001b[1;32m     85\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m invalid_names:\n",
-      "\u001b[0;31mValueError\u001b[0m: Names provided are not unique: ['MinMaxScaler', 'MinMaxScaler', 'MinMaxScaler']"
-     ]
+     "data": {
+      "text/plain": [
+       "(10000, 4)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -442,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -474,18 +466,18 @@
      "text": [
       "KNeighborsClassifier\n",
       "Model performance for training set\n",
-      "- f1 score 0.9457\n",
-      "- accuracy score 0.9613\n",
-      "- precision score 0.9705\n",
-      "- recall score 0.9222\n",
+      "- f1 score 0.7450\n",
+      "- accuracy score 0.8246\n",
+      "- precision score 0.7964\n",
+      "- recall score 0.6999\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.9019\n",
-      "- accuracy score 0.9340\n",
-      "- precision score 0.9267\n",
-      "- recall score 0.8784\n",
+      "- f1 score 0.6498\n",
+      "- accuracy score 0.7645\n",
+      "- precision score 0.6682\n",
+      "- recall score 0.6324\n",
       "===================================\n",
       "\n",
       "\n",
@@ -499,10 +491,10 @@
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 1.0000\n",
-      "- accuracy score 1.0000\n",
-      "- precision score 1.0000\n",
-      "- recall score 1.0000\n",
+      "- f1 score 0.6637\n",
+      "- accuracy score 0.7720\n",
+      "- precision score 0.6767\n",
+      "- recall score 0.6512\n",
       "===================================\n",
       "\n",
       "\n",
@@ -516,44 +508,44 @@
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 1.0000\n",
-      "- accuracy score 1.0000\n",
-      "- precision score 1.0000\n",
-      "- recall score 1.0000\n",
+      "- f1 score 0.5908\n",
+      "- accuracy score 0.7050\n",
+      "- precision score 0.5672\n",
+      "- recall score 0.6165\n",
       "===================================\n",
       "\n",
       "\n",
       "SVC\n",
       "Model performance for training set\n",
-      "- f1 score 1.0000\n",
-      "- accuracy score 1.0000\n",
-      "- precision score 1.0000\n",
-      "- recall score 1.0000\n",
+      "- f1 score 0.6667\n",
+      "- accuracy score 0.7843\n",
+      "- precision score 0.7675\n",
+      "- recall score 0.5893\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 1.0000\n",
-      "- accuracy score 1.0000\n",
-      "- precision score 1.0000\n",
-      "- recall score 1.0000\n",
+      "- f1 score 0.6787\n",
+      "- accuracy score 0.7955\n",
+      "- precision score 0.7423\n",
+      "- recall score 0.6252\n",
       "===================================\n",
       "\n",
       "\n",
       "LogisticRegression\n",
       "Model performance for training set\n",
-      "- f1 score 1.0000\n",
-      "- accuracy score 1.0000\n",
-      "- precision score 1.0000\n",
-      "- recall score 1.0000\n",
+      "- f1 score 0.5899\n",
+      "- accuracy score 0.7301\n",
+      "- precision score 0.6648\n",
+      "- recall score 0.5302\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 1.0000\n",
-      "- accuracy score 1.0000\n",
-      "- precision score 1.0000\n",
-      "- recall score 1.0000\n",
+      "- f1 score 0.6143\n",
+      "- accuracy score 0.7545\n",
+      "- precision score 0.6718\n",
+      "- recall score 0.5658\n",
       "===================================\n",
       "\n",
       "\n"
@@ -621,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -651,29 +643,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>RandomForestClassifier</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>SVC</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.678712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LogisticRegression</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <th>1</th>\n",
+       "      <td>RandomForestClassifier</td>\n",
+       "      <td>0.663717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNeighborsClassifier</td>\n",
-       "      <td>0.901932</td>\n",
+       "      <td>0.649814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.614297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DecisionTreeClassifier</td>\n",
+       "      <td>0.590846</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -681,14 +673,14 @@
       ],
       "text/plain": [
        "               Model Name  F1_Score\n",
-       "1  RandomForestClassifier  1.000000\n",
-       "2  DecisionTreeClassifier  1.000000\n",
-       "3                     SVC  1.000000\n",
-       "4      LogisticRegression  1.000000\n",
-       "0    KNeighborsClassifier  0.901932"
+       "3                     SVC  0.678712\n",
+       "1  RandomForestClassifier  0.663717\n",
+       "0    KNeighborsClassifier  0.649814\n",
+       "4      LogisticRegression  0.614297\n",
+       "2  DecisionTreeClassifier  0.590846"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -746,14 +738,14 @@
       "===================================\n",
       "Model Performance for Training Set\n",
       "- Mean Absolute Error 0.0175\n",
-      "- R2 Score Squared Error 0.6451\n",
+      "- R2 Score Squared Error 0.6450\n",
       "- Root Mean Squared Error 0.0221\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for Test Set\n",
       "- Mean Absolute Error 0.0170\n",
-      "- R2 Score Squared Error 0.6550\n",
+      "- R2 Score Squared Error 0.6548\n",
       "- Root Mean Squared Error 0.0214\n",
       "===================================\n",
       "\n",
@@ -768,9 +760,9 @@
       "\n",
       "\n",
       "Model Performance for Test Set\n",
-      "- Mean Absolute Error 0.0150\n",
-      "- R2 Score Squared Error 0.7119\n",
-      "- Root Mean Squared Error 0.0195\n",
+      "- Mean Absolute Error 0.0151\n",
+      "- R2 Score Squared Error 0.7065\n",
+      "- Root Mean Squared Error 0.0197\n",
       "===================================\n",
       "\n",
       "\n",
@@ -794,8 +786,8 @@
       "===================================\n",
       "Model Performance for Training Set\n",
       "- Mean Absolute Error 0.0034\n",
-      "- R2 Score Squared Error 0.9855\n",
-      "- Root Mean Squared Error 0.0045\n",
+      "- R2 Score Squared Error 0.9856\n",
+      "- Root Mean Squared Error 0.0044\n",
       "-----------------------------------\n",
       "\n",
       "\n",
@@ -930,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -972,22 +964,22 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.896638</td>\n",
+       "      <td>0.896584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Decision Tree Regressor</td>\n",
-       "      <td>0.711899</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Linear Regression</td>\n",
-       "      <td>0.654974</td>\n",
+       "      <td>0.706476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Ridge</td>\n",
        "      <td>0.654812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>0.654782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1007,15 +999,15 @@
        "                Model Name  R2_Score\n",
        "7    CatBoosting Regressor  0.963195\n",
        "6             XGBRegressor  0.925446\n",
-       "3  Random Forest Regressor  0.896638\n",
-       "1  Decision Tree Regressor  0.711899\n",
-       "0        Linear Regression  0.654974\n",
+       "3  Random Forest Regressor  0.896584\n",
+       "1  Decision Tree Regressor  0.706476\n",
        "5                    Ridge  0.654812\n",
+       "0        Linear Regression  0.654782\n",
        "2     KNeighbors Regressor  0.544295\n",
        "4                    Lasso -0.000564"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
