Updated model trainer

--- a/notebooks/model_trainer.ipynb
+++ b/notebooks/model_trainer.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4 -0.554305  0.797110  0.455450  0.656947  0.820923  0.049860  unstable  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "4 -0.554305  0.797110  0.455450  0.656947  0.820923  0.049860       0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,17 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_class = smart_grid_new.drop([\"stab\"], axis=1)\n",
-    "y_class = smart_grid_new[\"stable\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,31 +388,43 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
-    "delay_columns = X_class.columns[X_class.columns.str.startswith(\"delay\")]\n",
-    "adapt_columns = X_class.columns[X_class.columns.str.startswith(\"adapt\")]\n",
-    "power_columns = X_class.columns[X_class.columns.str.startswith(\"power\")]\n",
+    "delay_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"delay\")]\n",
+    "adapt_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"adapt\")]\n",
+    "power_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"power\")]\n",
     "\n",
     "\n",
     "#print(tau_columns)\n",
     "\n",
     "numeric_transformer = MinMaxScaler()\n",
     "preprocessor = ColumnTransformer([\n",
-    "    (\"MinMaxScaler\", numeric_transformer, delay_columns),\n",
+    "    (\"delay_scaler\", numeric_transformer, delay_columns),\n",
+    "    (\"adapt_scaler\", numeric_transformer, adapt_columns),\n",
+    "    (\"power_scaler\", numeric_transformer, power_columns)\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_class = smart_grid_new.drop([\"stab\", \"stable\"],axis=1)\n",
+    "y_class = smart_grid_new[\"stable\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000, 4)"
+       "(10000, 12)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -466,18 +468,18 @@
      "text": [
       "KNeighborsClassifier\n",
       "Model performance for training set\n",
-      "- f1 score 0.7450\n",
-      "- accuracy score 0.8246\n",
-      "- precision score 0.7964\n",
-      "- recall score 0.6999\n",
+      "- f1 score 0.8770\n",
+      "- accuracy score 0.9146\n",
+      "- precision score 0.9280\n",
+      "- recall score 0.8313\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.6498\n",
-      "- accuracy score 0.7645\n",
-      "- precision score 0.6682\n",
-      "- recall score 0.6324\n",
+      "- f1 score 0.7844\n",
+      "- accuracy score 0.8615\n",
+      "- precision score 0.8485\n",
+      "- recall score 0.7294\n",
       "===================================\n",
       "\n",
       "\n",
@@ -491,10 +493,10 @@
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.6637\n",
-      "- accuracy score 0.7720\n",
-      "- precision score 0.6767\n",
-      "- recall score 0.6512\n",
+      "- f1 score 0.8795\n",
+      "- accuracy score 0.9190\n",
+      "- precision score 0.9051\n",
+      "- recall score 0.8553\n",
       "===================================\n",
       "\n",
       "\n",
@@ -508,44 +510,44 @@
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.5908\n",
-      "- accuracy score 0.7050\n",
-      "- precision score 0.5672\n",
-      "- recall score 0.6165\n",
+      "- f1 score 0.7650\n",
+      "- accuracy score 0.8335\n",
+      "- precision score 0.7466\n",
+      "- recall score 0.7844\n",
       "===================================\n",
       "\n",
       "\n",
       "SVC\n",
       "Model performance for training set\n",
-      "- f1 score 0.6667\n",
-      "- accuracy score 0.7843\n",
-      "- precision score 0.7675\n",
-      "- recall score 0.5893\n",
+      "- f1 score 0.9686\n",
+      "- accuracy score 0.9771\n",
+      "- precision score 0.9728\n",
+      "- recall score 0.9645\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.6787\n",
-      "- accuracy score 0.7955\n",
-      "- precision score 0.7423\n",
-      "- recall score 0.6252\n",
+      "- f1 score 0.9477\n",
+      "- accuracy score 0.9640\n",
+      "- precision score 0.9518\n",
+      "- recall score 0.9436\n",
       "===================================\n",
       "\n",
       "\n",
       "LogisticRegression\n",
       "Model performance for training set\n",
-      "- f1 score 0.5899\n",
-      "- accuracy score 0.7301\n",
-      "- precision score 0.6648\n",
-      "- recall score 0.5302\n",
+      "- f1 score 0.7352\n",
+      "- accuracy score 0.8140\n",
+      "- precision score 0.7677\n",
+      "- recall score 0.7054\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.6143\n",
-      "- accuracy score 0.7545\n",
-      "- precision score 0.6718\n",
-      "- recall score 0.5658\n",
+      "- f1 score 0.7343\n",
+      "- accuracy score 0.8220\n",
+      "- precision score 0.7581\n",
+      "- recall score 0.7120\n",
       "===================================\n",
       "\n",
       "\n"
@@ -613,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -645,27 +647,27 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>SVC</td>\n",
-       "      <td>0.678712</td>\n",
+       "      <td>0.947674</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>RandomForestClassifier</td>\n",
-       "      <td>0.663717</td>\n",
+       "      <td>0.879464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNeighborsClassifier</td>\n",
-       "      <td>0.649814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LogisticRegression</td>\n",
-       "      <td>0.614297</td>\n",
+       "      <td>0.784436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>0.590846</td>\n",
+       "      <td>0.764996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.734328</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -673,14 +675,14 @@
       ],
       "text/plain": [
        "               Model Name  F1_Score\n",
-       "3                     SVC  0.678712\n",
-       "1  RandomForestClassifier  0.663717\n",
-       "0    KNeighborsClassifier  0.649814\n",
-       "4      LogisticRegression  0.614297\n",
-       "2  DecisionTreeClassifier  0.590846"
+       "3                     SVC  0.947674\n",
+       "1  RandomForestClassifier  0.879464\n",
+       "0    KNeighborsClassifier  0.784436\n",
+       "2  DecisionTreeClassifier  0.764996\n",
+       "4      LogisticRegression  0.734328"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,17 +694,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_reg = smart_grid_new.drop([\"stable\",\"stab\"],axis=1)\n",
+    "X_reg = smart_grid_new.drop([\"stab\", \"stable\"],axis=1)\n",
     "y_reg = smart_grid_new[\"stab\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -761,8 +763,8 @@
       "\n",
       "Model Performance for Test Set\n",
       "- Mean Absolute Error 0.0151\n",
-      "- R2 Score Squared Error 0.7065\n",
-      "- Root Mean Squared Error 0.0197\n",
+      "- R2 Score Squared Error 0.7089\n",
+      "- Root Mean Squared Error 0.0196\n",
       "===================================\n",
       "\n",
       "\n",
@@ -787,13 +789,13 @@
       "Model Performance for Training Set\n",
       "- Mean Absolute Error 0.0034\n",
       "- R2 Score Squared Error 0.9856\n",
-      "- Root Mean Squared Error 0.0044\n",
+      "- Root Mean Squared Error 0.0045\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for Test Set\n",
       "- Mean Absolute Error 0.0089\n",
-      "- R2 Score Squared Error 0.8966\n",
+      "- R2 Score Squared Error 0.8961\n",
       "- Root Mean Squared Error 0.0117\n",
       "===================================\n",
       "\n",
@@ -922,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -964,12 +966,12 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.896584</td>\n",
+       "      <td>0.896073</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Decision Tree Regressor</td>\n",
-       "      <td>0.706476</td>\n",
+       "      <td>0.708857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -999,15 +1001,15 @@
        "                Model Name  R2_Score\n",
        "7    CatBoosting Regressor  0.963195\n",
        "6             XGBRegressor  0.925446\n",
-       "3  Random Forest Regressor  0.896584\n",
-       "1  Decision Tree Regressor  0.706476\n",
+       "3  Random Forest Regressor  0.896073\n",
+       "1  Decision Tree Regressor  0.708857\n",
        "5                    Ridge  0.654812\n",
        "0        Linear Regression  0.654782\n",
        "2     KNeighbors Regressor  0.544295\n",
        "4                    Lasso -0.000564"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
