Updated model trainer

--- a/notebooks/model_trainer.ipynb
+++ b/notebooks/model_trainer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
     "from sklearn.svm import SVR, SVC\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold, KFold\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, LogisticRegression\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, LogisticRegression\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "4 -0.554305  0.797110  0.455450  0.656947  0.820923  0.049860  unstable  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "4 -0.554305  0.797110  0.455450  0.656947  0.820923  0.049860       0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,51 +380,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Column Transformer with 3 types of transformers\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
     "delay_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"delay\")]\n",
     "adapt_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"adapt\")]\n",
-    "power_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"power\")]\n",
+    "#power_columns = smart_grid_new.columns[smart_grid_new.columns.str.startswith(\"power\")]\n",
     "\n",
     "\n",
     "#print(tau_columns)\n",
     "\n",
-    "numeric_transformer = MinMaxScaler()\n",
+    "numeric_transformer = StandardScaler()\n",
     "preprocessor = ColumnTransformer([\n",
     "    (\"delay_scaler\", numeric_transformer, delay_columns),\n",
     "    (\"adapt_scaler\", numeric_transformer, adapt_columns),\n",
-    "    (\"power_scaler\", numeric_transformer, power_columns)\n",
+    "    #(\"power_scaler\", numeric_transformer, power_columns)\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_class = smart_grid_new.drop([\"stab\", \"stable\"],axis=1)\n",
+    "X_class = smart_grid_new.drop([\"stab\", \"stable\", \"power1\", \"power2\", \"power3\", \"power4\"],axis=1)\n",
     "y_class = smart_grid_new[\"stable\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000, 12)"
+       "(10000, 8)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -468,18 +468,18 @@
      "text": [
       "KNeighborsClassifier\n",
       "Model performance for training set\n",
-      "- f1 score 0.8770\n",
-      "- accuracy score 0.9146\n",
-      "- precision score 0.9280\n",
-      "- recall score 0.8313\n",
+      "- f1 score 0.9162\n",
+      "- accuracy score 0.9403\n",
+      "- precision score 0.9413\n",
+      "- recall score 0.8925\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.7844\n",
-      "- accuracy score 0.8615\n",
-      "- precision score 0.8485\n",
-      "- recall score 0.7294\n",
+      "- f1 score 0.8526\n",
+      "- accuracy score 0.9030\n",
+      "- precision score 0.8976\n",
+      "- recall score 0.8119\n",
       "===================================\n",
       "\n",
       "\n",
@@ -493,10 +493,10 @@
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.8795\n",
-      "- accuracy score 0.9190\n",
-      "- precision score 0.9051\n",
-      "- recall score 0.8553\n",
+      "- f1 score 0.8900\n",
+      "- accuracy score 0.9260\n",
+      "- precision score 0.9145\n",
+      "- recall score 0.8669\n",
       "===================================\n",
       "\n",
       "\n",
@@ -510,44 +510,44 @@
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.7650\n",
-      "- accuracy score 0.8335\n",
-      "- precision score 0.7466\n",
-      "- recall score 0.7844\n",
+      "- f1 score 0.7913\n",
+      "- accuracy score 0.8520\n",
+      "- precision score 0.7717\n",
+      "- recall score 0.8119\n",
       "===================================\n",
       "\n",
       "\n",
       "SVC\n",
       "Model performance for training set\n",
-      "- f1 score 0.9686\n",
-      "- accuracy score 0.9771\n",
-      "- precision score 0.9728\n",
-      "- recall score 0.9645\n",
+      "- f1 score 0.9765\n",
+      "- accuracy score 0.9829\n",
+      "- precision score 0.9817\n",
+      "- recall score 0.9713\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.9477\n",
-      "- accuracy score 0.9640\n",
-      "- precision score 0.9518\n",
-      "- recall score 0.9436\n",
+      "- f1 score 0.9577\n",
+      "- accuracy score 0.9710\n",
+      "- precision score 0.9661\n",
+      "- recall score 0.9493\n",
       "===================================\n",
       "\n",
       "\n",
       "LogisticRegression\n",
       "Model performance for training set\n",
-      "- f1 score 0.7352\n",
-      "- accuracy score 0.8140\n",
-      "- precision score 0.7677\n",
-      "- recall score 0.7054\n",
+      "- f1 score 0.7343\n",
+      "- accuracy score 0.8130\n",
+      "- precision score 0.7653\n",
+      "- recall score 0.7057\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for the test set\n",
-      "- f1 score 0.7343\n",
-      "- accuracy score 0.8220\n",
-      "- precision score 0.7581\n",
-      "- recall score 0.7120\n",
+      "- f1 score 0.7330\n",
+      "- accuracy score 0.8215\n",
+      "- precision score 0.7585\n",
+      "- recall score 0.7091\n",
       "===================================\n",
       "\n",
       "\n"
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -647,27 +647,27 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>SVC</td>\n",
-       "      <td>0.947674</td>\n",
+       "      <td>0.957664</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>RandomForestClassifier</td>\n",
-       "      <td>0.879464</td>\n",
+       "      <td>0.890045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>KNeighborsClassifier</td>\n",
-       "      <td>0.784436</td>\n",
+       "      <td>0.852584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>0.764996</td>\n",
+       "      <td>0.791255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>LogisticRegression</td>\n",
-       "      <td>0.734328</td>\n",
+       "      <td>0.732984</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -675,14 +675,14 @@
       ],
       "text/plain": [
        "               Model Name  F1_Score\n",
-       "3                     SVC  0.947674\n",
-       "1  RandomForestClassifier  0.879464\n",
-       "0    KNeighborsClassifier  0.784436\n",
-       "2  DecisionTreeClassifier  0.764996\n",
-       "4      LogisticRegression  0.734328"
+       "3                     SVC  0.957664\n",
+       "1  RandomForestClassifier  0.890045\n",
+       "0    KNeighborsClassifier  0.852584\n",
+       "2  DecisionTreeClassifier  0.791255\n",
+       "4      LogisticRegression  0.732984"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,28 +694,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_reg = smart_grid_new.drop([\"stab\", \"stable\"],axis=1)\n",
     "y_reg = smart_grid_new[\"stab\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_reg, y_reg, test_size=0.2, random_state=10)"
+    "X_train, X_test, y_train, y_test = train_test_split(X_class, y_reg, test_size=0.2, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -740,14 +739,14 @@
       "===================================\n",
       "Model Performance for Training Set\n",
       "- Mean Absolute Error 0.0175\n",
-      "- R2 Score Squared Error 0.6450\n",
+      "- R2 Score Squared Error 0.6448\n",
       "- Root Mean Squared Error 0.0221\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for Test Set\n",
       "- Mean Absolute Error 0.0170\n",
-      "- R2 Score Squared Error 0.6548\n",
+      "- R2 Score Squared Error 0.6546\n",
       "- Root Mean Squared Error 0.0214\n",
       "===================================\n",
       "\n",
@@ -762,105 +761,25 @@
       "\n",
       "\n",
       "Model Performance for Test Set\n",
-      "- Mean Absolute Error 0.0151\n",
-      "- R2 Score Squared Error 0.7089\n",
-      "- Root Mean Squared Error 0.0196\n",
+      "- Mean Absolute Error 0.0145\n",
+      "- R2 Score Squared Error 0.7300\n",
+      "- Root Mean Squared Error 0.0189\n",
       "===================================\n",
       "\n",
       "\n",
       "KNeighbors Regressor\n",
       "===================================\n",
       "Model Performance for Training Set\n",
-      "- Mean Absolute Error 0.0166\n",
-      "- R2 Score Squared Error 0.6827\n",
-      "- Root Mean Squared Error 0.0209\n",
+      "- Mean Absolute Error 0.0080\n",
+      "- R2 Score Squared Error 0.9183\n",
+      "- Root Mean Squared Error 0.0106\n",
       "-----------------------------------\n",
       "\n",
       "\n",
       "Model Performance for Test Set\n",
-      "- Mean Absolute Error 0.0196\n",
-      "- R2 Score Squared Error 0.5443\n",
-      "- Root Mean Squared Error 0.0246\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Random Forest Regressor\n",
-      "===================================\n",
-      "Model Performance for Training Set\n",
-      "- Mean Absolute Error 0.0034\n",
-      "- R2 Score Squared Error 0.9856\n",
-      "- Root Mean Squared Error 0.0045\n",
-      "-----------------------------------\n",
-      "\n",
-      "\n",
-      "Model Performance for Test Set\n",
-      "- Mean Absolute Error 0.0089\n",
-      "- R2 Score Squared Error 0.8961\n",
-      "- Root Mean Squared Error 0.0117\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Lasso\n",
-      "===================================\n",
-      "Model Performance for Training Set\n",
-      "- Mean Absolute Error 0.0314\n",
-      "- R2 Score Squared Error 0.0000\n",
-      "- Root Mean Squared Error 0.0370\n",
-      "-----------------------------------\n",
-      "\n",
-      "\n",
-      "Model Performance for Test Set\n",
-      "- Mean Absolute Error 0.0306\n",
-      "- R2 Score Squared Error -0.0006\n",
-      "- Root Mean Squared Error 0.0364\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Ridge\n",
-      "===================================\n",
-      "Model Performance for Training Set\n",
-      "- Mean Absolute Error 0.0175\n",
-      "- R2 Score Squared Error 0.6450\n",
-      "- Root Mean Squared Error 0.0221\n",
-      "-----------------------------------\n",
-      "\n",
-      "\n",
-      "Model Performance for Test Set\n",
-      "- Mean Absolute Error 0.0170\n",
-      "- R2 Score Squared Error 0.6548\n",
-      "- Root Mean Squared Error 0.0214\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "XGBRegressor\n",
-      "===================================\n",
-      "Model Performance for Training Set\n",
-      "- Mean Absolute Error 0.0026\n",
-      "- R2 Score Squared Error 0.9916\n",
-      "- Root Mean Squared Error 0.0034\n",
-      "-----------------------------------\n",
-      "\n",
-      "\n",
-      "Model Performance for Test Set\n",
-      "- Mean Absolute Error 0.0075\n",
-      "- R2 Score Squared Error 0.9254\n",
-      "- Root Mean Squared Error 0.0099\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "CatBoosting Regressor\n",
-      "===================================\n",
-      "Model Performance for Training Set\n",
-      "- Mean Absolute Error 0.0029\n",
-      "- R2 Score Squared Error 0.9886\n",
-      "- Root Mean Squared Error 0.0040\n",
-      "-----------------------------------\n",
-      "\n",
-      "\n",
-      "Model Performance for Test Set\n",
-      "- Mean Absolute Error 0.0049\n",
-      "- R2 Score Squared Error 0.9632\n",
-      "- Root Mean Squared Error 0.0070\n",
+      "- Mean Absolute Error 0.0093\n",
+      "- R2 Score Squared Error 0.8821\n",
+      "- Root Mean Squared Error 0.0125\n",
       "===================================\n",
       "\n",
       "\n"
@@ -924,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -956,37 +875,37 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>CatBoosting Regressor</td>\n",
-       "      <td>0.963195</td>\n",
+       "      <td>0.965857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>XGBRegressor</td>\n",
-       "      <td>0.925446</td>\n",
+       "      <td>0.932497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.896073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Decision Tree Regressor</td>\n",
-       "      <td>0.708857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Ridge</td>\n",
-       "      <td>0.654812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Linear Regression</td>\n",
-       "      <td>0.654782</td>\n",
+       "      <td>0.903804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>KNeighbors Regressor</td>\n",
-       "      <td>0.544295</td>\n",
+       "      <td>0.882124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision Tree Regressor</td>\n",
+       "      <td>0.719302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ridge</td>\n",
+       "      <td>0.654639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>0.654637</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -999,17 +918,17 @@
       ],
       "text/plain": [
        "                Model Name  R2_Score\n",
-       "7    CatBoosting Regressor  0.963195\n",
-       "6             XGBRegressor  0.925446\n",
-       "3  Random Forest Regressor  0.896073\n",
-       "1  Decision Tree Regressor  0.708857\n",
-       "5                    Ridge  0.654812\n",
-       "0        Linear Regression  0.654782\n",
-       "2     KNeighbors Regressor  0.544295\n",
+       "7    CatBoosting Regressor  0.965857\n",
+       "6             XGBRegressor  0.932497\n",
+       "3  Random Forest Regressor  0.903804\n",
+       "2     KNeighbors Regressor  0.882124\n",
+       "1  Decision Tree Regressor  0.719302\n",
+       "5                    Ridge  0.654639\n",
+       "0        Linear Regression  0.654637\n",
        "4                    Lasso -0.000564"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
